--- a/6_Scikit/23_AdvanceTechForLoadingmodelfromdisk/video37.ipynb
+++ b/6_Scikit/23_AdvanceTechForLoadingmodelfromdisk/video37.ipynb
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -619,9 +619,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training took 43.96106515328089 mins\n",
+      "AUC for Randomized Search Gradient Boost: 0.861863\n"
+     ]
+    }
+   ],
    "source": [
     "params = {'gradientboostingclassifier__n_estimators':[200,300,500,800,1000,1500],\n",
     "          \"gradientboostingclassifier__max_features\": randint(10,45),\n",
@@ -645,9 +654,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model with rank: 1\n",
+      "Mean validation score: 0.864 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 17, 'gradientboostingclassifier__min_samples_leaf': 7, 'gradientboostingclassifier__min_samples_split': 7, 'gradientboostingclassifier__n_estimators': 300, 'gradientboostingclassifier__subsample': 0.75}\n",
+      "\n",
+      "Model with rank: 2\n",
+      "Mean validation score: 0.864 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 24, 'gradientboostingclassifier__min_samples_leaf': 6, 'gradientboostingclassifier__min_samples_split': 5, 'gradientboostingclassifier__n_estimators': 300, 'gradientboostingclassifier__subsample': 0.7}\n",
+      "\n",
+      "Model with rank: 3\n",
+      "Mean validation score: 0.864 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 10, 'gradientboostingclassifier__min_samples_leaf': 8, 'gradientboostingclassifier__min_samples_split': 4, 'gradientboostingclassifier__n_estimators': 800, 'gradientboostingclassifier__subsample': 0.75}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "joblib.dump(randomSearch_p2,'randomSearch_pipe2_credit.pkl')\n",
     "report_best_scores(randomSearch_p2.cv_results_)"
@@ -655,9 +683,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model with rank: 1\n",
+      "Mean validation score: 0.864 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 17, 'gradientboostingclassifier__min_samples_leaf': 7, 'gradientboostingclassifier__min_samples_split': 7, 'gradientboostingclassifier__n_estimators': 300, 'gradientboostingclassifier__subsample': 0.75}\n",
+      "\n",
+      "Model with rank: 2\n",
+      "Mean validation score: 0.864 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 24, 'gradientboostingclassifier__min_samples_leaf': 6, 'gradientboostingclassifier__min_samples_split': 5, 'gradientboostingclassifier__n_estimators': 300, 'gradientboostingclassifier__subsample': 0.7}\n",
+      "\n",
+      "Model with rank: 3\n",
+      "Mean validation score: 0.864 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 10, 'gradientboostingclassifier__min_samples_leaf': 8, 'gradientboostingclassifier__min_samples_split': 4, 'gradientboostingclassifier__n_estimators': 800, 'gradientboostingclassifier__subsample': 0.75}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "randomSearch_p2 = joblib.load('randomSearch_pipe2_credit.pkl')\n",
     "report_best_scores(randomSearch_p2.cv_results_)"
@@ -665,9 +712,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC for Randomized Search Gradient Boost: 0.861863\n"
+     ]
+    }
+   ],
    "source": [
     "randomSearch_p2 = joblib.load('randomSearch_pipe2_credit.pkl')\n",
     "randomSearch_p2_auc = roc_auc_score(y_valid,randomSearch_p2.predict_proba(X_valid)[:, 1])\n",
@@ -676,9 +731,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC on Test for P2: 0.867854\n"
+     ]
+    }
+   ],
    "source": [
     "rand_p2_auc = roc_auc_score(y_test,randomSearch_p2.predict_proba(X_test)[:, 1])\n",
     "print(\"AUC on Test for P2: {:.6f}\".format(rand_p2_auc))"
@@ -686,9 +749,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      "[[24881   258]\n",
+      " [ 1514   347]]\n"
+     ]
+    }
+   ],
    "source": [
     "preds_rand_p2 = randomSearch_p2.predict(X_valid)\n",
     "confusion = confusion_matrix(y_valid, preds_rand_p2)\n",
@@ -697,9 +770,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\program files\\python37\\lib\\site-packages\\sklearn\\utils\\deprecation.py:58: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n",
+      "c:\\program files\\python37\\lib\\site-packages\\sklearn\\utils\\deprecation.py:58: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(251503, 10)\n",
+      "len of cat cols = 0\n",
+      "combined shape = (251503, 10)\n",
+      "(251503, 10)\n",
+      "(150000, 1)\n",
+      "0.0\n",
+      "   SeriousDlqin2yrs\n",
+      "0               1.0\n",
+      "1               0.0\n",
+      "2               0.0\n",
+      "3               0.0\n",
+      "4               0.0\n",
+      "(150000,)\n"
+     ]
+    }
+   ],
    "source": [
     "df_raw = pd.read_csv(f'{PATH}train.csv', low_memory=False)\n",
     "df_test = pd.read_csv(f'{PATH}test.csv', low_memory=False)\n",
@@ -746,9 +849,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((108000, 10), (27000, 10), (108000,), (27000,))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = combined[:n_train]\n",
     "df_test = combined[n_train:]\n",
@@ -766,9 +880,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC for Gradient Boost Pipeline3: 0.859008\n"
+     ]
+    }
+   ],
    "source": [
     "pipe_model3 = processing_pipeline3.fit(X_train,y_train)\n",
     "pipe3_auc = roc_auc_score(y_valid,pipe_model3.predict_proba(X_valid)[:, 1])\n",
@@ -777,9 +899,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training took 35.36313624779383 mins\n",
+      "AUC on Randomized Search for P3: 0.861847\n"
+     ]
+    }
+   ],
    "source": [
     "params = {'gradientboostingclassifier__n_estimators':[200,300,500,800,1000,1500],\n",
     "          'gradientboostingclassifier__max_features': randint(1,11),\n",
@@ -805,30 +936,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model with rank: 1\n",
+      "Mean validation score: 0.865 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 1, 'gradientboostingclassifier__min_samples_leaf': 2, 'gradientboostingclassifier__min_samples_split': 8, 'gradientboostingclassifier__n_estimators': 500, 'gradientboostingclassifier__subsample': 0.9, 'polynomialfeatures__degree': 1}\n",
+      "\n",
+      "Model with rank: 2\n",
+      "Mean validation score: 0.865 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 2, 'gradientboostingclassifier__min_samples_leaf': 9, 'gradientboostingclassifier__min_samples_split': 4, 'gradientboostingclassifier__n_estimators': 500, 'gradientboostingclassifier__subsample': 0.6, 'polynomialfeatures__degree': 1}\n",
+      "\n",
+      "Model with rank: 3\n",
+      "Mean validation score: 0.865 (std: 0.005)\n",
+      "Parameters: {'gradientboostingclassifier__max_features': 10, 'gradientboostingclassifier__min_samples_leaf': 4, 'gradientboostingclassifier__min_samples_split': 2, 'gradientboostingclassifier__n_estimators': 300, 'gradientboostingclassifier__subsample': 0.8, 'polynomialfeatures__degree': 2}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "joblib.dump(randomSearch_p3,'randomSearch_pipe3_credit.pkl')\n",
+    "joblib.dump(randomSearch_p3,'./randomSearch_pipe3_credit.pkl')\n",
     "report_best_scores(randomSearch_p3.cv_results_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC for Randomized Search Gradient Boost: 0.861847\n"
+     ]
+    }
+   ],
    "source": [
-    "randomSearch_p3 = joblib.load('randomSearch_pipe3_credit.pkl')\n",
+    "randomSearch_p3 = joblib.load('./randomSearch_pipe3_credit.pkl')\n",
     "randomSearch_p3_auc = roc_auc_score(y_valid,randomSearch_p3.predict_proba(X_valid)[:, 1])\n",
     "print(\"AUC for Randomized Search Gradient Boost: {:.6f}\".format(randomSearch_p3_auc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC on Test for P3: 0.867939\n"
+     ]
+    }
+   ],
    "source": [
     "rand_p3_auc = roc_auc_score(y_test,randomSearch_p3.predict_proba(X_test)[:, 1])\n",
     "print(\"AUC on Test for P3: {:.6f}\".format(rand_p3_auc))"
